# Nexus-HelloWorld

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Nexus-HelloWorld.cpp  Nexus-HelloWorld.h  README.md
scripts/: generate_version.sh
src/: version.h
